[package]
name = "minisign"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "console_log"]


[dependencies]
cfg-if = "1.0.0"
minisign-verify = "0.2.3"
wasm-bindgen = { version = "0.2.100", features = ["spans", "std"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

lol_alloc = "0.4.1"

log = "0.4"
console_log = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
